--- a/src/css/main.css
+++ b/src/css/main.css
@@ -12,7 +12,7 @@ body {
 .hero {
   height: 100vh;
   /* Image and transparency */
-  background-image: linear-gradient(to top, rgba(255, 255, 255, 0), rgba(0, 125, 179, 0)), url(../media/img-1.jpeg);
+  background-image: linear-gradient(0deg, rgba(70, 63, 58, 0.8), rgba(70, 63, 58, 0.8)), url(../media/img-3.jpg);
   background-size: cover;
   background-position: top;
   background-repeat: no-repeat;
@@ -28,11 +28,26 @@ body {
   font-size: 3em;
   font-family: "Ubuntu", sans-serif; }
 
-/* .transparentBG {
-    background-color: rgba(0, 0, 0, 0.0);
-    height: 50px;
-    width: 100%;
-    height: 500px;
-    width: 500px;
-    border-radius: 50%;
-  } */
+.topnav {
+  background-color: transparent;
+  overflow: hidden;
+  height: 70px; }
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: right;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px; }
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: transparent;
+  border-bottom: 3px solid #E0AFA0; }
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: transparent;
+  border-bottom: 3px solid black; }
