--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -21,16 +21,17 @@ body {
 
   /* Image and transparency */
   background-image: linear-gradient(
-      to top,
-      rgba(255, 255, 255, 0),
-      rgba(0, 125, 179, 0)
+      0deg,
+      rgba(70, 63, 58, .8),
+      rgba(70, 63, 58, .8)
     ),
-    url(../media/img-1.jpeg);
+    url(../media/img-3.jpg);
   background-size: cover;
   background-position: top;
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
+
 .hero-inner {
   width: 50%;
   margin-left: 30px;
@@ -41,11 +42,31 @@ body {
   font-size: 3em;
   font-family: "Ubuntu", sans-serif;
 }
-/* .transparentBG {
-    background-color: rgba(0, 0, 0, 0.0);
-    height: 50px;
-    width: 100%;
-    height: 500px;
-    width: 500px;
-    border-radius: 50%;
-  } */
+
+.topnav {
+  background-color: transparent;
+  overflow: hidden;
+  height: 70px;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: right;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: transparent;
+  border-bottom: 3px solid $color-primary;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: transparent;
+  border-bottom: 3px solid black;
+}
