--- a/src/css/main.css
+++ b/src/css/main.css
@@ -8,6 +8,18 @@ body {
   width: 300px;
   border-radius: 50%; }
 
+.btn {
+  background-color: #E0AFA0;
+  border: none;
+  height: 30px;
+  width: 100px; }
+
+.content {
+  width: 70%;
+  margin: auto;
+  margin-top: 50px;
+  margin-bottom: 100px; }
+
 /* HERO SECTION */
 .hero {
   height: 100vh;
@@ -21,6 +33,7 @@ body {
 .hero-inner {
   width: 50%;
   margin-left: 30px;
+  text-align: right;
   color: #E0AFA0; }
 
 .main-line {
