--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -16,17 +16,25 @@ body {
 }
 
 .btn {
+  background-color: transparent;
+  border: 2px solid $color-primary;
+  height: 40px;
+  width: 130px;
+  transition: 0.3s;
+  color: #FFF;
+}
+
+.btn:hover {
   background-color: $color-primary;
-  border: none;
-  height: 30px;
-  width: 100px;
 }
 
 .content {
   width: 70%;
   margin: auto;
   margin-top: 50px;
-  margin-bottom: 100px;
+  margin-bottom: 200px;
+  height: 100%;
+  padding-bottom: 100px;
 }
 
 /* HERO SECTION */
@@ -72,16 +80,32 @@ body {
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
+  transition: 0.3s;
 }
 
 /* Change the color of links on hover */
 .topnav a:hover {
-  background-color: transparent;
-  border-bottom: 3px solid $color-primary;
+  background-color: $color-primary;
 }
 
 /* Add a color to the active/current link */
 .topnav a.active {
   background-color: transparent;
   border-bottom: 3px solid black;
+}
+
+// ANIMATIONS
+
+.animate__animated.animate__fadeIn {
+  --animate-duration: 2s;
+}
+
+.left {
+  width: 30%;
+  float: left;
+}
+
+.right {
+  width: 70%;
+  float: right;
 }
