--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,27 @@ html {
   scroll-behavior: smooth;
 }
 
+h1 {
+  font-size: 8em;
+}
+
+h3 {
+  font-size: 5em;
+}
+
+.scroll {
+  height: 100px;
+  width: 200px;
+  background-color: transparent;
+  border: none;
+  transition: 1s;
+}
+
+.scroll:hover {
+  color: thistle;
+  transition: .3s;
+}
+
 .centered-content {
   text-align: center;
 }
@@ -29,10 +50,14 @@ html {
 }
 
 .hero {
-  margin-top: -60px;
-  height: 90vh;
+  background-image: linear-gradient(
+      to right bottom,
+      rgba(81, 81, 81, 0.6),
+      rgba(0, 125, 179, 0.8)
+    ),
+    url(https://images.pexels.com/photos/34088/pexels-photo.jpg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
+  height: 100vh;
   padding: 30px;
-  margin-bottom: 60px;
 }
 
 .red {
@@ -49,12 +74,4 @@ html {
 
 .bottom-center a {
     color: white;
-}
-
-nav,
-nav .nav-wrapper i,
-nav a.sidenav-trigger,
-nav a.sidenav-trigger i {
-  height: 60px;
-  line-height: 60px;
 }
