--- a/src/style.css
+++ b/src/style.css
@@ -14,16 +14,25 @@ h3 {
   font-size: 5em;
 }
 
+p {
+  font-size: 2em;
+}
+
+.headline {
+  color: #DB162F;
+}
+
 .scroll {
   height: 100px;
   width: 200px;
   background-color: transparent;
   border: none;
   transition: 1s;
+  color: #FFF;
 }
 
 .scroll:hover {
-  color: thistle;
+  opacity: .2;
   transition: .3s;
 }
 
@@ -51,13 +60,14 @@ h3 {
 
 .hero {
   background-image: linear-gradient(
-      to right bottom,
-      rgba(81, 81, 81, 0.6),
-      rgba(0, 125, 179, 0.8)
+      to right,
+      rgba(59, 31, 43, 0.8),
+      rgba(219, 22, 47, 0.9)
     ),
     url(https://images.pexels.com/photos/34088/pexels-photo.jpg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
   height: 100vh;
   padding: 30px;
+  color: #FFF;
 }
 
 .red {
@@ -74,4 +84,10 @@ h3 {
 
 .bottom-center a {
     color: white;
+}
+
+.contacto {
+  height: 60px;
+  width: 400px;
+  color: white;
 }
