Added contact component

--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,10 @@ html {
   scroll-behavior: smooth;
 }
 
+li {
+  font-size: 1.6em;
+}
+
 .hero-left {
   width: 80%;
   float: left;
@@ -17,8 +21,33 @@ html {
   float: right;
 }
 
+.space {
+  height: 30px;
+}
+
 .headline {
   color: #DB162F;
+}
+
+
+.highlight-text {
+  color: #3B1F2B;
+  font-weight: bold;
+  font-size: 2em;
+}
+
+.nav {
+  color: #DBDFAC;
+  transition: .3s;
+}
+
+.nav:hover {
+  text-decoration: underline;
+  transition: .3s;
+}
+
+.icon-color {
+  color: #3B1F2B;
 }
 
 .scroll {
@@ -38,6 +67,9 @@ html {
 .scroll:hover {
   opacity: .2;
   transition: .3s;
+}
+.scroll:active {
+  background-color: transparent;
 }
 
 .centered-content {
@@ -64,7 +96,7 @@ html {
 
 .hero {
   background-image: linear-gradient(
-      to right,
+      to top,
       rgba(59, 31, 43, 0.8),
       rgba(219, 22, 47, 0.9)
     ),
@@ -103,8 +135,6 @@ html {
   margin-top: 30px;
 }
 
-
-
 .about-img {
   height: 200px;
   width: auto;
@@ -114,9 +144,21 @@ html {
   margin-top: 150px;
 }
 
-
 .icon {
   height: 60px;
   margin: 40px;
   color: #FFF;
+  transition: .3s;
  }
+
+.icon:hover {
+  opacity: .2;
+  transition: .3s;
+}
+
+.contact-section {
+  height: 100vh;
+  background-color: #3B1F2B;
+  color: #FFF;
+  padding-top: 50px;
+}
