--- a/src/style.css
+++ b/src/style.css
@@ -3,14 +3,31 @@ html, body {
   font-family: "Roboto", sans-serif;
 }
 
-li {
-  font-size: 1.6em;
+.background-main {
+  background-color: black;
+  background-image: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0),
+      rgba(3, 12, 34)
+    );
+  background-size: cover;
+  height: 100vh;
+  color: #FFF;
 }
 
+.btn-lg {
+  margin-left: 20px;
+}
 
-section {
-  scroll-snap-align: start;
-  position: relative;
+.page-info {
+  margin-top: -30%;
+  width: 100%;
+  z-index: 10;
+  text-align: center;
+}
+
+li {
+  font-size: 1.6em;
 }
 
 .fullscreen {
