--- a/src/style.css
+++ b/src/style.css
@@ -1,48 +1,81 @@
+@media
+(min-device-width: 100px) and
+(min-width: 100px){
+  .page-info {
+    margin-top: -250px;
+  }
+}
+
+@media
+(min-device-width: 301px) and
+(min-width: 301px) and (orientation:portrait) {
+  .page-info {
+    margin-top: -500px;
+  }
+}
+
+@media
+(min-device-width: 768px) and
+(min-width: 768px){
+  .page-info {
+    margin-top: -550px;
+  }
+}
+
+@media
+(min-device-width: 992px) and
+(min-width: 992px){
+  .page-info {
+    margin-top: -750px;
+  }
+}
+
 html, body {
   scroll-behavior: smooth;
   font-family: "Roboto", sans-serif;
+  margin: 0;
+}
+
+.page-info {
+  width: 100%;
+  z-index: 10;
+  text-align: center;
 }
 
 .background-main {
   background-color: black;
   background-image: linear-gradient(
       to bottom,
-      rgba(0, 0, 0),
-      rgba(3, 12, 34)
+      rgba(0, 24, 72),
+      rgba(48, 24, 96)
     );
   background-size: cover;
   height: 100vh;
   color: #FFF;
 }
 
-.btn-lg {
-  margin-left: 20px;
+.back {
+  background-color: #906090;
+    border-radius: 5px;
+    height: 50px;
+    width: 200px;
+    font-size: 1.2em;
+    border: none;
+    color: #FFF;
+    transition: 0.3s
 }
 
-.page-info {
-  margin-top: -30%;
-  width: 100%;
-  z-index: 10;
-  text-align: center;
+.back:hover {
+  background-color: #604878;
+  transition: 0.3s
 }
 
-li {
-  font-size: 1.6em;
-}
-
-.fullscreen {
+#tsparticles {
   height: 100vh;
 }
 
-.hero-left {
-  width: 80%;
-  float: left;
-}
-
-.hero-right {
-  padding-top: 10%;
-  width: 20%;
-  float: right;
+.btn-lg {
+  margin-left: 20px;
 }
 
 .space {
@@ -50,148 +83,24 @@ li {
 }
 
 .headline {
-  color: #db162f;
+  color: #604878;
+  margin-top: 30px;
 }
 
-.bold {
-  font-weight: bolder;
-}
-
-.highlight-text {
-  color: #3b1f2b;
-  font-weight: bold;
-  font-size: 2em;
-}
-
-.nav {
-  color: #dbdfac;
-  transition: 0.3s;
-}
-
-.nav:hover {
-  text-decoration: underline;
-  transition: 0.3s;
-}
-
-.icon-color {
-  color: #db162f;
-}
-
-.scroll {
-  height: 100px;
-  width: 200px;
-  background-color: transparent;
-  border: none;
-  transition: 1s;
-  color: #fff;
-}
-
-.scroll-2 {
-  margin-left: 40%;
-  color: #000;
-}
-
-.scroll:hover {
-  opacity: 0.2;
-  transition: 0.3s;
-}
-.scroll:active {
-  background-color: transparent;
-}
-
-.centered-content {
+.center-align {
   text-align: center;
 }
 
-.centered-box {
-  margin: auto;
+.highlight-text {
+  color: #604878;
+  font-weight: bold;
+  font-size: 2em;
 }
 
 .content {
   width: 70%;
 }
 
-.right-space {
-  margin-right: 25px;
-}
-
-.hero {
-  background-image: linear-gradient(
-      to top,
-      rgba(59, 31, 43, 0.8),
-      rgba(219, 22, 47, 0.9)
-    ),
-    url(https://images.pexels.com/photos/34088/pexels-photo.jpg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
-  height: 100vh;
-  padding: 20px;
-  color: #fff;
-  padding: 50px;
-}
-
-.highlight {
-  background-color: Coral;
-}
-
-.grey-bg {
-  background-color: #f8f8f8;
-  padding: 20px;
-}
-
-.bottom-center {
-  text-align: center;
-  bottom: 20px;
-  position: absolute;
-  width: 100%;
-}
-
 .margin-bottom {
   margin-bottom: 25px;
-}
-
-.bottom-center a {
-  color: white;
-}
-
-.contacto {
-  height: 60px;
-  width: 400px;
-  color: white;
-}
-
-.logos {
-  max-height: 200px;
-  margin-right: 40px;
-  margin-top: 30px;
-}
-
-.about-img {
-  height: 200px;
-  width: auto;
-}
-
-.responsive-img {
-  margin-top: 150px;
-}
-
-.icon {
-  height: 60px;
-  margin: 40px;
-  color: #fff;
-  transition: 0.3s;
-}
-
-.icon:hover {
-  opacity: 0.2;
-  transition: 0.3s;
-}
-
-.contact-section {
-  height: 100vh;
-  background-color: #3b1f2b;
-  color: #fff;
-  padding-top: 50px;
-}
-
-#stack {
-  padding-top: 10px;
 }
